# AI-L2P

./: .gitignore  pyproject.toml
glass_knight/: arena.py  data.py  exhibition.py  lichess.py  model.py  move_vocab.py  tokenizer.py  trace.py  train.py
tests/: test_pipeline.py
ui/: package-lock.json  package.json
ui/app/: globals.css  page.tsx
ui/components/: Board.tsx  BrainPanel.tsx  EvalBar.tsx  LogitLens.tsx
ui/lib/: types.ts  useExhibition.ts
