[project]
name = "glass-knight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "numpy>=2.4.6",
    "python-chess>=1.999",
    "torch>=2.12.1",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glass_knight"]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
]
